package br.com.academico.evento;

public interface Ieventos {
    public void inscrever();

}