package br.com.academico.projeto;

public interface Iprojetos {
    public void submeterProjetosDePesquisa();

    public void submeterProjetosDeExtensao();
}
